add one component

--- a/src/Styles/common.scss
+++ b/src/Styles/common.scss
@@ -12,7 +12,7 @@ body {
     background-color: hsl(210deg, 17%, 98%);
 
     font-family: sans-serif;
-    font-size: 1rem;
+    font-size: 18px;
     color: $font-color-light;
     font-family: $font-family-text;
     margin: 0;
