--- a/src/Styles/Components/_badge.scss
+++ b/src/Styles/Components/_badge.scss
@@ -1,5 +1,5 @@
 .badge {
-    font-size: .5em;
+    font-size: 0.725em;
     font-weight: bold;
     color: $white;
     background-color: $primary;
